--- a/package.json
+++ b/package.json
@@ -2,11 +2,12 @@
   "name": "yelp2",
   "version": "1.0.0",
   "description": "yelp type app",
-  "main": "index.js",
+  "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx babel --watch src --out-dir . -presets react-app/prod",
-    "server-dev": "nodemon --watch"
+    "start": "babel-watch src/index.jsx",
+    "server-dev": "nodemon --watch",
+    "react-dev": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -26,19 +27,21 @@
   },
   "homepage": "https://github.com/tigerkh3/rpp2209-mvp#readme",
   "dependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-react-app": "^3.1.2",
     "express": "^4.18.2",
     "node": "^19.2.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.2.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.20.5",
+    "@babel/preset-env": "^7.20.2",
+    "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.0",
+    "babel-watch": "^7.7.2",
+    "html-webpack-plugin": "^5.5.0",
+    "nodemon": "^2.0.20",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1",
     "webpack-dev-server": "^4.11.1"
-  },
-  "devDependencies": {
-    "@babel/preset-react": "^7.18.6",
-    "nodemon": "^2.0.20"
   }
 }
