--- a/package.json
+++ b/package.json
@@ -5,9 +5,8 @@
   "main": "server/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "babel-watch src/index.jsx",
-    "server-dev": "nodemon --watch",
-    "react-dev": "webpack --watch"
+    "server-dev": "nodemon --watch index.js",
+    "react-dev": "webpack --mode development --watch"
   },
   "repository": {
     "type": "git",
@@ -27,7 +26,9 @@
   },
   "homepage": "https://github.com/tigerkh3/rpp2209-mvp#readme",
   "dependencies": {
+    "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "jquery": "^3.6.2",
     "node": "^19.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
