--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "homepage": "https://github.com/tigerkh3/rpp2209-mvp#readme",
   "dependencies": {
+    "axios": "^1.2.1",
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "jquery": "^3.6.2",
